# project007-backend

./: README.md  pyproject.toml
app/: database.py  main.py  models.py
data/: electoral-bond-purchasers.csv  electoral-bond-redeemers.csv
scripts/: csv-to-sqlite.py  pdf-to-csv.py
